Add the stream type change functionality
As the first Settings option, let's allow the user for changing the
streaming type of a given channel to either MPEG-TS or HLS.

Reflect the situation when syncing and also to AcePlayer when
streaming a given link.

--- a/app/src/main/res/values/services.xml
+++ b/app/src/main/res/values/services.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="ace_playlist_url">http://ace-tv.xyz:25461/get.php?username=%1$s&#38;password=%2$s&#38;type=m3u_plus&#38;output=hls</string>
+    <string name="ace_playlist_url">http://ace-tv.xyz:25461/get.php?username=%1$s&#38;password=%2$s&#38;type=m3u_plus&#38;output=%3$s</string>
     <string name="ace_epg_url">http://ace-tv.xyz:25461/xmltv.php?username=%1$s&#38;password=%2$s</string>
 </resources>
