--- a/app/src/main/res/layout/activity_auth_tv.xml
+++ b/app/src/main/res/layout/activity_auth_tv.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:name="com.zaclimon.aceiptv.auth.AuthFragmentTv"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent">
+
+    <FrameLayout
+        android:id="@+id/activity_auth_fragment_holder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+</RelativeLayout>
