Settings: Add an about/user info section
- Add the About/UserInfo guided fragments
- Create the UserInfoView and UserInfoPresenter interfaces for
interaction when retrieving user related information
- Create an Async class, AsyncRetrieveUserInfos to get the related
information in an async way.
- Add some other stuff (API endpoint, strings, icons)

--- a/app/src/main/res/values/services.xml
+++ b/app/src/main/res/values/services.xml
@@ -3,4 +3,5 @@
     <string name="ace_playlist_url">http://ace-tv.xyz:25461/get.php?username=%1$s&#38;password=%2$s&#38;type=m3u_plus&#38;output=%3$s</string>
     <string name="ace_epg_url">http://ace-tv.xyz:25461/xmltv.php?username=%1$s&#38;password=%2$s</string>
     <string name="ace_catchup_url">http://mikkm.xyz/android/androidApi.php?url=http://ace-tv.xyz:25461/&#38;mode=timeshift&#38;username=%1$s&#38;password=%2$s</string>
+    <string name="ace_user_info_url">http://mikkm.xyz/android/androidApi.php?url=http://ace-tv.xyz:25461/&#38;mode=user_info&#38;username=%1$s&#38;password=%2$s</string>
 </resources>
