strings_channels.xml: Replace Fox by Fox HD in entertainment
We don't want any time of Fox channel to be grouped into
entertainment. (Like Fox Sports for example)

For this reason, precise the channel which is Fox HD.

--- a/app/src/main/res/values/strings_channels.xml
+++ b/app/src/main/res/values/strings_channels.xml
@@ -62,7 +62,7 @@
         <item>BBC FOUR</item>
         <item>LONDON LIVE</item>
         <item>ITV</item>
-        <item>FOX</item>
+        <item>FOX HD</item>
         <item>TLC</item>
         <item>SKY TWO</item>
         <item>MORE4</item>
