--- a/app/src/main/res/xml/acetvinputservice.xml
+++ b/app/src/main/res/xml/acetvinputservice.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tv-input
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:canRecord="true"
-    android:setupActivity="com.zaclimon.aceiptv.setup.AceTvInputSetupActivity"/>
+    android:setupActivity="com.zaclimon.aceiptv.ui.setup.AceTvInputSetupActivity"/>
