strings_channels.xml: Adjust CBS as well
Looks like CBS Sports is added into the entertainment section
which isn't something we want...

--- a/app/src/main/res/values/strings_channels.xml
+++ b/app/src/main/res/values/strings_channels.xml
@@ -94,7 +94,7 @@
         <item>BET</item>
         <item>BRAVO</item>
         <item>CBC</item>
-        <item>CBS</item>
+        <item>USA/CA: CBS</item>
         <item>CHCH</item>
         <item>CITY</item>
         <item>COTTAGE LIFE</item>
