--- a/app/src/main/res/values/services.xml
+++ b/app/src/main/res/values/services.xml
@@ -5,4 +5,5 @@
     <string name="ace_playlist_url">http://ace-tv.xyz:25461/get.php?username=%1$s&#38;password=%2$s&#38;type=m3u_plus&#38;output=%3$s</string>
     <string name="ace_series_url">http://mikkm.xyz/android/androidApi.php?url=http://ace-tv.xyz:25461/&#38;mode=series&#38;username=%1$s&#38;password=%2$s</string>
     <string name="ace_user_info_url">http://mikkm.xyz/android/androidApi.php?url=http://ace-tv.xyz:25461/&#38;mode=user_info&#38;username=%1$s&#38;password=%2$s</string>
+    <string name="ace_vod_url">http://mikkm.xyz/android/androidApi.php?url=http://ace-tv.xyz:25461/&#38;mode=vod&#38;username=%1$s&#38;password=%2$s</string>
 </resources>
