--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimaryTv">#0A4970</color>
+    <color name="colorPrimaryLightTv">#45749F</color>
+    <color name="colorPrimaryDarkTv">#002244</color>
+    <color name="colorAccentTv">#FFCD39</color>
+    <color name="colorAccentLightTv">#FFFF6D</color>
+    <color name="colorAccentDarkTv">#C89C00</color>
+    <color name="colorTextAccentPrimary">#DE000000</color>
+    <color name="colorTextAccentSecondary">#8A000000</color>
+
 </resources>
