--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,33 @@
 <resources>
-
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    
+    <style name="TvTheme" parent="Theme.Leanback">
+        <item name="android:colorPrimary">@color/colorPrimaryTv</item>
+        <item name="android:colorPrimaryDark">@color/colorPrimaryDarkTv</item>
+        <item name="android:colorAccent">@color/colorAccentTv</item>
+        <item name="guidedStepTheme">@style/GuidedStepTheme</item>
+        <item name="imageCardViewStyle">@style/ImageCardViewTheme</item>
+        <item name="imageCardViewTitleStyle">@style/ImageCardViewTitleTheme</item>
     </style>
 
+    <style name="GuidedStepTheme" parent="Theme.Leanback.GuidedStep">
+        <item name="guidedStepBackground">@color/colorPrimaryTv</item>
+        <item name="guidedActionsBackground">@color/colorAccentTv</item>
+        <item name="guidedActionsBackgroundDark">@color/colorAccentDarkTv</item>
+        <item name="guidedActionItemTitleStyle">@style/GuidedStepTitleTheme</item>
+    </style>
+
+    <style name="GuidedStepTitleTheme" parent="Widget.Leanback.GuidedActionItemTitleStyle">
+        <item name="android:textColor">@color/colorTextAccentPrimary</item>
+    </style>
+
+    <style name="ImageCardViewTheme" parent="Widget.Leanback.ImageCardViewStyle">
+        <item name="cardBackground">@color/colorPrimaryTv</item>
+        <item name="infoAreaBackground">@color/colorAccentTv</item>
+        <item name="lbImageCardViewType">Title</item>
+    </style>
+
+    <style name="ImageCardViewTitleTheme" parent="Widget.Leanback.ImageCardView.TitleStyle">
+        <item name="android:textColor">@color/colorTextAccentPrimary</item>
+    </style>
+    
 </resources>
