Add manual EPG offset for TV Catchup
In order to watch some content, users might have to change their EPG
offset for it's airing time to be consistent. Add the possibility to do so.

--- a/app/src/main/res/values/services.xml
+++ b/app/src/main/res/values/services.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ace_catchup_url">http://mikkm.xyz/android/androidApi.php?url=http://ace-tv.xyz:25461/&#38;mode=timeshift&#38;username=%1$s&#38;password=%2$s</string>
+    <string name="ace_catchup_offset_url">http://mikkm.xyz/android/androidApi.php?url=http://ace-tv.xyz:25461/&#38;mode=timeshift&#38;epg_shift=%1$d&#38;username=%2$s&#38;password=%3$s</string>
     <string name="ace_epg_url">http://ace-tv.xyz:25461/xmltv.php?username=%1$s&#38;password=%2$s</string>
     <string name="ace_playlist_url">http://ace-tv.xyz:25461/get.php?username=%1$s&#38;password=%2$s&#38;type=m3u_plus&#38;output=%3$s</string>
     <string name="ace_series_url">http://mikkm.xyz/android/androidApi.php?url=http://ace-tv.xyz:25461/&#38;mode=series&#38;username=%1$s&#38;password=%2$s</string>
