--- a/app/src/main/res/values/services.xml
+++ b/app/src/main/res/values/services.xml
@@ -7,4 +7,5 @@
     <string name="ace_series_url">http://mikkm.xyz/android/androidApi.php?url=http://ace-tv.xyz:25461/&#38;mode=series&#38;username=%1$s&#38;password=%2$s</string>
     <string name="ace_user_info_url">http://mikkm.xyz/android/androidApi.php?url=http://ace-tv.xyz:25461/&#38;mode=user_info&#38;username=%1$s&#38;password=%2$s</string>
     <string name="ace_vod_url">http://mikkm.xyz/android/androidApi.php?url=http://ace-tv.xyz:25461/&#38;mode=vod&#38;username=%1$s&#38;password=%2$s</string>
+    <string name="provider_playlist_url">%1$s/get.php?username=%2$s&#38;password=%3$s&#38;type=m3u_plus&#38;output=%4$s</string>
 </resources>
