--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,9 @@
     <color name="colorPrimaryTv">#0A4970</color>
     <color name="colorPrimaryLightTv">#45749F</color>
     <color name="colorPrimaryDarkTv">#002244</color>
-    <color name="colorAccentTv">#FFCD39</color>
-    <color name="colorAccentLightTv">#FFFF6D</color>
-    <color name="colorAccentDarkTv">#C89C00</color>
+    <color name="colorAccentTv">#FF9100</color>
+    <color name="colorAccentLightTv">#FFD180</color>
+    <color name="colorAccentDarkTv">#FF6D00</color>
     <color name="colorTextAccentPrimary">#DE000000</color>
     <color name="colorTextAccentSecondary">#8A000000</color>
 
