--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,14 @@
 
     <style name="GuidedStepTitleTheme" parent="Widget.Leanback.GuidedActionItemTitleStyle">
         <item name="android:textColor">@color/colorTextAccentPrimary</item>
+        <item name="android:editTextStyle">@style/GuidedStepEditTextTheme</item>
+        <item name="editTextStyle">@style/GuidedStepEditTextTheme</item>
+    </style>
+
+    <style name="GuidedStepEditTextTheme" parent="Widget.AppCompat.EditText">
+        <item name="android:colorControlNormal">@color/colorTextAccentPrimary</item>
+        <item name="android:colorControlActivated">@color/colorTextAccentPrimary</item>
+        <item name="android:colorControlHighlight">@color/colorTextAccentPrimary</item>
     </style>
 
     <style name="ImageCardViewTheme" parent="Widget.Leanback.ImageCardViewStyle">
@@ -29,5 +37,5 @@
     <style name="ImageCardViewTitleTheme" parent="Widget.Leanback.ImageCardView.TitleStyle">
         <item name="android:textColor">@color/colorTextAccentPrimary</item>
     </style>
-    
+
 </resources>
