--- a/tiflibrary/src/main/res/layout/tif_channel_setup_guidance.xml
+++ b/tiflibrary/src/main/res/layout/tif_channel_setup_guidance.xml
@@ -7,33 +7,34 @@
 
   <RelativeLayout
       android:id="@+id/guidance_container"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
       style="?attr/guidanceContainerStyle"
       android:layout_marginTop="40sp"
-      android:layout_marginBottom="40sp"
-      >
+      android:layout_marginBottom="40sp">
 
     <ImageView
         android:id="@+id/guidance_icon"
-        style="?attr/guidanceIconStyle"/>
-
-    <TextView
-        android:id="@+id/guidance_breadcrumb"
-        style="?attr/guidanceBreadcrumbStyle"/>
+        style="?attr/guidanceIconStyle"
+        android:layout_centerVertical="true"/>
 
     <TextView
         android:id="@+id/guidance_title"
-        style="?attr/guidanceTitleStyle"/>
+        style="?attr/guidanceTitleStyle"
+        android:layout_centerVertical="true"/>
 
     <TextView
         android:id="@+id/guidance_description"
-        style="?attr/guidanceDescriptionStyle"/>
+        style="?attr/guidanceDescriptionStyle"
+        android:layout_centerVertical="true"/>
 
     <ProgressBar
         android:id="@+id/tif_tune_progress"
         style="@style/TifSetup.ScanProgress"/>
+
     <ListView
-          android:id="@+id/tif_channel_list"
-          style="@style/TifSetup.ChannelList"/>
+        android:id="@+id/tif_channel_list"
+        style="@style/TifSetup.ChannelList"/>
 
   </RelativeLayout>
 
