--- a/app/src/main/res/layout/fragment_guided_wizard_loading.xml
+++ b/app/src/main/res/layout/fragment_guided_wizard_loading.xml
@@ -12,6 +12,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginBottom="8dp"
+        android:indeterminateTint="@color/colorAccentTv"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/loading_title"/>
