--- a/app/src/main/res/layout/tsutaeru_guidedactions_item.xml
+++ b/app/src/main/res/layout/tsutaeru_guidedactions_item.xml
@@ -15,13 +15,13 @@
      limitations under the License.
 -->
 <!-- Layout for an action item displayed in the 2 pane actions fragment. -->
-<android.support.v17.leanback.widget.GuidedActionItemContainer
+<androidx.leanback.widget.GuidedActionItemContainer
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     style="?attr/guidedActionItemContainerStyle" >
 
-    <android.support.v17.leanback.widget.CheckableImageView
+    <androidx.leanback.widget.CheckableImageView
         android:id="@+id/guidedactions_item_checkmark"
         style="?attr/guidedActionItemCheckmarkStyle"
         tools:ignore="ContentDescription" />
@@ -31,24 +31,24 @@
         style="?attr/guidedActionItemIconStyle"
         tools:ignore="ContentDescription" />
 
-    <android.support.v17.leanback.widget.NonOverlappingLinearLayout
+    <androidx.leanback.widget.NonOverlappingLinearLayout
         android:id="@+id/guidedactions_item_content"
         style="?attr/guidedActionItemContentStyle" >
 
-        <android.support.v17.leanback.widget.GuidedActionEditText
+        <androidx.leanback.widget.GuidedActionEditText
             android:id="@+id/guidedactions_item_title"
             android:theme="@style/GuidedStepEditTextTheme"
             style="?attr/guidedActionItemTitleStyle" />
 
-        <android.support.v17.leanback.widget.GuidedActionEditText
+        <androidx.leanback.widget.GuidedActionEditText
             android:id="@+id/guidedactions_item_description"
             style="?attr/guidedActionItemDescriptionStyle" />
 
-    </android.support.v17.leanback.widget.NonOverlappingLinearLayout>
+    </androidx.leanback.widget.NonOverlappingLinearLayout>
 
     <ImageView
         android:id="@+id/guidedactions_item_chevron"
         style="?attr/guidedActionItemChevronStyle"
         tools:ignore="ContentDescription" />
 
-</android.support.v17.leanback.widget.GuidedActionItemContainer>
+</androidx.leanback.widget.GuidedActionItemContainer>
